<resources>
    <string name="app_name">Mypak</string>
    <string name="places_api_key">AIzaSyCNs1wH7F3CUq1_tYEkN_9BjfAvKeJmBLw</string>
    <string name="facebook_app_id">602330774235551</string>
    <string name="fb_login_protocol_scheme">fb602330774235551</string>
    <string name="welcome_to_mypack">Welcome to Mypack</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_gmail">Sign up with gmail</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="email_or_user">Email or username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="fogrot_password">Forgot Password ?</string>
    <string name="log_in_without_password">Log In Without Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_no">Phone number</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="enter_the_otp_send_to_8645657896">Enter the otp send to +8645657896</string>
    <string name="you_can_resend_your_code_if_it_dosen_t_arrive_in_0_43">You can resend your code if it dosen\'t arrive in 0:43</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="what_s_the_size">What\'s the size</string>
    <string name="fit_in_a_pocket">Fit in a pocket</string>
    <string name="my_requests">My Requests</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="dropoff_address">Dropoff Address</string>
    <string name="dropoff_dummyaddress">Akshya Nagar 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</string>
    <string name="pickup_dummyaddress">9278 Victoria Street NORTH LONDON N28 1CW 175 King Street MILTON KEYNES MK30 4RC</string>
    <string name="parcel_detail">Parcel Detail</string>
    <string name="my_sendings">My Sendings</string>
    <string name="messages">Messages</string>
    <string name="maps_api_key">AIzaSyD5KJs-4W2v_SJM5oJrwrC92KCcu34m9do</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="recipient_s_name">Recipient\'s Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="add_parcel">Add Parcel Request</string>
    <string name="select_pick_up_address">Select Pickup address</string>
    <string name="select_drop_off_address">Select dropoff address</string>
    <string name="select_pickup_date">Select pickup date</string>
    <string name="select_drop_date">Select dropoff date</string>
    <string name="mobile_number">Mobile number</string>
    <string name="item_detail">Item Detail</string>
    <string name="delivery_instructions">Delivery Instruction</string>
    <string name="upload">Upload</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_email_add">Please enter email address</string>
    <string name="please_select_add">Please select address</string>
    <string name="please_enterlandmark_add">Please enter landmark address</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_conf_pass">Please enter confirm password</string>
    <string name="password_validation_text">Password should be greater than 4 digits</string>
    <string name="password_not_match">Password not matched</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="please_check_internet">Please check your internet connection!</string>
    <string name="invalid_number">Invalid phone number</string>
    <string name="please_enter_phone_add">Please enter phone number</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="please_enter_otp">Please enter Otp</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="dropoff_date">Dropoff Date</string>
    <string name="applied_bids">Applied Bids</string>
    <string name="price">Price</string>
    <string name="ok">Ok</string>
    <string name="enter_otp">Enter otp</string>
    <string name="resend">Resend</string>
    <string name="please_enter_new_pass">Please enter new passsword</string>
    <string name="please_enter_old_pass">Please enter old password</string>
    <string name="success">Success</string>
    <string name="reset_link_msg">Resend link sent to your Mail-Id</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="please_select_item_quantity">Please select item quantity</string>
    <string name="please_select_item_category">Please select item category</string>
    <string name="no_request_found">No Request Found</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="comments">Comments</string>
    <string name="bid_detail">Bid Details</string>
    <string name="home">Home</string>
    <string name="inter_parcel_delivery">Immediate Parcel Delivery</string>
    <string name="scheduled_parcel_delivery">Scheduled Parcel Delivery</string>
    <string name="fetch_loc">Fetch Location...</string>

    <string-array name="parcel_quantity">
        <item>Less then 1KG</item>
        <item>1KG - 5KG</item>
        <item>5KG - 10KG</item>
        <item>10KG - 15KG</item>
        <item>15KG - 20KG</item>
        <item>20KG - 25KG</item>
        <item>25KG - 30KG</item>
        <item>30KG - 35KG</item>
        <item>35KG - 40KG</item>
        <item>40KG - 50KG</item>
        <item>50KG - 60KG</item>
        <item>60KG - 70KG</item>
        <item>70KG - 80KG</item>
        <item>80KG - 90KG</item>
        <item>90KG - 100KG</item>
        <item>Above 100KG</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Bicycle</item>
        <item>Motorcycle</item>
        <item>Bil</item>
        <item>Cash Car</item>
        <item>Truck</item>
    </string-array>

    <string-array name="parcel_item_category">
        <item>Select Item Category</item>
        <item>Document</item>
        <item>Food</item>
        <item>Cloting</item>
        <item>Electronics</item>
        <item>Fragile</item>
        <item>Medical</item>
        <item>Other</item>
    </string-array>

    <string name="need_permission">Need Permissions</string>
    <string name="goto_setting">GOTO SETTINGS</string>
    <string name="this_app_needs">This app needs permission to use this feature. You can grant them in app settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="your_current_location">Your current Location :</string>
    <string name="where_it_should_be_picked_up_from">Where it should be picked up from</string>
    <string name="please_pick_loc">Please select pickup location</string>
    <string name="where_should_it_be_delivered">Where should it be delivered</string>
    <string name="please_dev_loc">Please select delivery location</string>
    <string name="what_do_you_want_to_send">What do you want to send?</string>
    <string name="select_dev_addrss">Select delivery address</string>
    <string name="title">Title</string>
    <string name="e_g_office_chair">(e.g Office chair)</string>
    <string name="descp">Description</string>
    <string name="for_future_delivery_set_date_and_time_optiona">For future delivery set date and time (Optional)</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="make_parcel_request">Make Parcel Request</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_desp">Please enter description</string>
    <string name="please_upload_parcel_photo">Please upload parcel photo</string>
    <string name="select_package_size">Select Package Size</string>
    <string name="select_your_preferred_vehicle">Select your preferred vehicle</string>
    <string name="welcome_mypak_moroccan_first_and_smart_transportation_app">Welcome Mypak moroccan first and smart transportation app</string>
    <string name="summary">Payment Summary</string>
    <string name="pay_now">Pay Now</string>
    <string name="vehivle_charge_per_km">Vehivle charge per/Km</string>
    <string name="parcel_distance_in_km">Parcel distance in Km</string>
    <string name="to_pay">To Pay</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="cash_on_visit">Cash (On Visit)</string>
    <string name="online_payment">Online Payment</string>
    <string name="please_select_pay_menthod">Please select payment method</string>
    <string name="order_history">Order History</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="quantity">Quantity :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="total_pay">Total Pay :</string>
    <string name="request_to_driver">Request to driver</string>
    <string name="near_by_drivers">Near By Drivers</string>
    <string name="list">List</string>
    <string name="map">Map</string>

</resources>