<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_back_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/ivBack"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/what_do_you_want_to_send"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="@color/gray"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivUploadParcelImg"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:riv_corner_radius="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:src="@drawable/upload_photo"
                android:layout_height="@dimen/_100sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_bold"
                android:text="@string/title"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_g_office_chair"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="textVisiblePassword"
                    android:fontFamily="@font/circular_regular"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_12sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_bold"
                android:text="@string/descp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etDsecp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:hint="@string/item_detail"
                    android:textSize="@dimen/_10sdp"
                    android:gravity="top"
                    android:inputType="textVisiblePassword|textMultiLine"
                    android:fontFamily="@font/circular_regular"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_12sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_bold"
                android:text="@string/for_future_delivery_set_date_and_time_optiona"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date_and_time"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="textVisiblePassword"
                    android:fontFamily="@font/circular_regular"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_12sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_back_10"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/circular_bold"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/next" />

    </RelativeLayout>

</layout>




