<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/orange_logo_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_22sdp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/circular_medium"
                android:text="@string/sign_in"/>

            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:id="@+id/cvGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:contentPadding="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_28sdp"
                android:layout_marginRight="@dimen/_28sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/edit_google"
                    android:fontFamily="@font/circular_regular"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/sign_up_with_google"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:id="@+id/cvFb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:contentPadding="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_28sdp"
                android:layout_marginRight="@dimen/_28sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/edit_fb"
                    android:fontFamily="@font/circular_regular"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/sign_up_with_facebook"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:id="@+id/cvGmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:contentPadding="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_28sdp"
                android:layout_marginRight="@dimen/_28sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/edit_gmail"
                    android:fontFamily="@font/circular_regular"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/sign_up_with_gmail"/>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_acc"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/circular_regular"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/circular_bold"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textStyle="bold"
                android:textColor="@color/orange" />

        </LinearLayout>

    </RelativeLayout>

</layout>