<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_back_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/ivBack"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/where_should_it_be_delivered"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@+id/ivBack"
                android:layout_gravity="start"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_regular"
                android:text="@string/select_dev_addrss"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/fetch_loc"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_8sdp"
                android:drawableLeft="@drawable/ic_blue_location"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAllCaps="false"
                android:background="@drawable/gray_outline_back"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivAddAdress"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/add_parcel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_back_10"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/circular_bold"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/next" />

    </RelativeLayout>

</layout>




