<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_back"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_bold"
                android:text="@string/near_by_drivers"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="@dimen/_5sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvList"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/orange_grad_back_5"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/list"/>

                <TextView
                    android:id="@+id/tvMap"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/map"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:id="@+id/rvNearDrivers"/>

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/map"
                    android:visibility="gone"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>

            </LinearLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>

</layout>